--- a/style.css
+++ b/style.css
@@ -3,3 +3,33 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+  text-align: center;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 75%
+}
+
+nav {
+  text-align: center;
+  background: palegoldenrod
+}
+a {
+  padding-left: 10px;
+  padding-right: 10px; 
+}
+
+figcaption {
+  text-align: center;
+  font-size: small
+}
+.featured-property {
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
